# PyLib

./: .gitignore  README.md  pyproject.toml
docs/: arch.md  issues.md  todo.md
src/pylib/: __init__.py
src/pylib/alter/: chars.py  image.py  proxy.py
src/pylib/client/: imap.py  smtp.py
src/pylib/client/http/: __init__.py  abs.py  advanced.py  basic.py  downloader.py  schema.py
src/pylib/client/http2/: __init__.py  abs.py  advanced.py  basic.py  downloader.py  schema.py
src/pylib/client/https/: __init__.py  abs.py  advanced.py  basic.py  downloader.py
src/pylib/faker/: passwords.py  useragents.py  usernames.py
src/pylib/storage/: cache.py  io.py
src/pylib/utils/: debugger.py  parser.py  timer.py
tests/: conftest.py  demo.py
tests/alter/: test_chars.py  test_image.py  test_proxy.py
tests/client/: test_imap.py  test_smtp.py
tests/client/http/: test_abs.py  test_advanced.py  test_basic.py  test_downloader.py
tests/client/http2/: test_abs.py  test_advanced.py  test_basic.py  test_downloader.py
tests/client/https/: test_abs.py  test_advanced.py  test_basic.py  test_downloader.py
tests/storage/: test_cache.py  test_io.py
tests/utils/: test_debugger.py  test_parser.py  test_timer.py
